--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Generador de reportes",
+  "name": "generador-de-reportes",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
